--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.18",
+    "framer-motion": "^12.23.24",
+    "hls.js": "^1.6.13",
     "lucide-react": "^0.545.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
